# ShotGraph

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  env.prod.example  pyproject.toml  requirements-dev-full.txt  requirements-dev.txt  requirements.txt
app/: __init__.py  dependencies.py  main.py  main_debug.py  schemas.py  security.py
assets/mock/: README.md
config/: __init__.py  logging.conf  prompt_loader.py  settings.py
config/prompts/: content_moderation_system.txt  content_moderation_user.txt  json_repair_system.txt  json_repair_user.txt  scene_breakdown.txt  scene_breakdown_toon.txt  shot_planning.txt  shot_planning_toon.txt  story_summarization_system.txt  story_summarization_user.txt  style_guide.txt
core/: __init__.py  constants.py  exceptions.py  models.py  orchestrator.py
core/agents/: __init__.py  audio_tts.py  base.py  json_repair.py  music_generator.py  scene_splitter.py  shot_planner.py  video_compositor.py  video_generator.py
core/protocols/: __init__.py  llm_client.py  music_generator.py  nlp_processor.py  tts_generator.py  video_generator.py
core/schemas/: json_schemas.py
core/services/: __init__.py  device_utils.py  llm_client.py  model_router.py  music.py  nlp.py  style_context.py  toon.py  tts.py  video_editing.py  video_effects.py  vision.py
docs/: code_implementation.md  deployment.md  how_to_debug.md  research.md
scripts/: start.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  (+3 more)
workers/: tasks.py
